Fix spacing issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,13 @@ header {
 }
 
 #messages {
-	margin:20px;
+	margin:20px; 
+	.alert {
+		color:red;
+	}
+	.success {
+		color:green;
+	}
 }
 
 .signed-in-as {
